# R6Analyser

./: .gitignore  LICENSE  README-dev.md  README.md  build.spec  build_config.json  bundle.json  debug.json  defaults.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.spec  settings.json
assets/: asset_map.json
configs/: example.json
docs/: Configuration.docx
scripts/: build-noexe.ps1  build-noexe.sh  build.ps1  build.py  build.sh  bundle.py  combine-script.py  publish.py
settings/: debug.json  defaults.json  game-settings.json  settings.json
src/: analyser.py  args.py  assets.py  boxing-tool.py  capture.py  cli.py  config.py  controller.py  enums.py  history.py  ignmatrix.py  params.py  region-tool.py  regiontool.py  run.py  scheduler.py  settings.py  stats.py  utils.py  writer.py
src/analyser/: __init__.py  base.py  inperson.py  killfeed.py  smart.py  spectator.py  template_matcher.py  utils.py
src/assets/: __init__.py  _assets.py
src/capture/: __init__.py  base.py  capture.py  chunk_loader.py  screenshot.py  timer.py  twitch.py  utils.py  videofile.py  youtube.py
src/cli/: __init__.py  _cli.py
src/config/: __init__.py  analyser_cfg.py  common.py  region_models.py  regiontool_cfg.py  utils.py
src/ignmatrix/: __init__.py  base.py  fixed.py  infer.py  player.py  utils.py
src/ocr/: __init__.py  base.py  engine.py  segment.py  utils.py
src/tools/: __init__.py  deps_check.py  regiontool.py  (+1 more)
tests/: conftest.py  test_config.py  test_ignmatrix.py  test_ocrengine.py  test_stats.py  test_timer.py  test_utils_utils.py
(+34 files in other folders)
